force-app/main/default/objects/Account/fields/Select_3rd_Party_DC_Provider_for_Seconda__c.field-meta.xml
<CustomField>
    <fullName>Select_3rd_Party_DC_Provider_for_Seconda__c</fullName>
    <inlineHelpText>Select 3rd Party Secondary DC Provider</inlineHelpText>
    <label>Select 3rd party if applicable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ctrl-S</fullName>
            </value>
            <value>
                <fullName>NTT</fullName>
            </value>
            <value>
                <fullName>STT</fullName>
            </value>
            <value>
                <fullName>NextGen</fullName>
            </value>
            <value>
                <fullName>ESDS</fullName>
            </value>
            <value>
                <fullName>WebWerks</fullName>
            </value>
            <value>
                <fullName>Sify</fullName>
            </value>
            <value>
                <fullName>Adani</fullName>
            </value>
            <value>
                <fullName>L&amp;T</fullName>
            </value>
            <value>
                <fullName>Nxtra</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Reliance</fullName>
            </value>
            <value>
                <fullName>Net4India</fullName>
            </value>
            <value>
                <fullName>PiDC</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>