force-app/main/default/objects/Account/fields/Send_for_Approval_CP__c.field-meta.xml
<CustomField>
    <fullName>Send_for_Approval_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send for Approval(CP)</label>
    <type>Checkbox</type>
</CustomField>