force-app/main/default/objects/Account/fields/Server_Backup_Platform__c.field-meta.xml
<CustomField>
    <fullName>Server_Backup_Platform__c</fullName>
    <label>Server Backup Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commvault</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>Veritas</fullName>
            </value>
            <value>
                <fullName>Acronis</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>