force-app/main/default/objects/Account/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>These are the services offered by the partner</description>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud services</fullName>
            </value>
            <value>
                <fullName>Independent software vendor</fullName>
            </value>
            <value>
                <fullName>SAP partner</fullName>
            </value>
            <value>
                <fullName>Hardware reseller</fullName>
            </value>
            <value>
                <fullName>System integrator</fullName>
            </value>
            <value>
                <fullName>Datacenter</fullName>
            </value>
            <value>
                <fullName>IPC</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>