force-app/main/default/objects/Account/fields/Signed_SCF_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_SCF_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be marked as True when Signed SCF form is uploaded and will be marked as False when OMT approves the approval process. There is a validation that it has to be True while submitting the SCF for approval.</description>
    <label>Signed SCF Uploaded?</label>
    <type>Checkbox</type>
</CustomField>