force-app/main/default/objects/Account/fields/Solution_vendors__c.field-meta.xml
<CustomField>
    <fullName>Solution_vendors__c</fullName>
    <label>Who are Solution vendors?</label>
    <type>TextArea</type>
</CustomField>