force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>State does not exist with specified Country.</errorMessage>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>equals</operation>
            <valueField>State__c.Country__c</valueField>
        </filterItems>
        <infoMessage>Select Country to drill down related states</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>