force-app/main/default/objects/Account/fields/Submit_for_KYC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_KYC_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets from Quick Action on Submitted for KYC Approval</description>
    <label>Submit for KYC Approval</label>
    <type>Checkbox</type>
</CustomField>