force-app/main/default/objects/Account/fields/SWOT_Threats_to_Yotta_in_the_account__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Threats_to_Yotta_in_the_account__c</fullName>
    <label>SWOT : Threats to Yotta in the account</label>
    <type>TextArea</type>
</CustomField>