force-app/main/default/objects/Account/fields/SWOT_Yotta_Weakness_in_the_account__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Yotta_Weakness_in_the_account__c</fullName>
    <label>SWOT : Yotta Weakness in the account</label>
    <type>TextArea</type>
</CustomField>