force-app/main/default/objects/Account/fields/Synced_Through_Contract__c.field-meta.xml
<CustomField>
    <fullName>Synced_Through_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Nandish. 
Functionality: Send account, Contacts and Addresses to Kafka</description>
    <label>Send Everything To Kafka</label>
    <type>Checkbox</type>
</CustomField>