force-app/main/default/objects/Account/fields/TAN__c.field-meta.xml
<CustomField>
    <fullName>TAN__c</fullName>
    <inlineHelpText>Total Length 10. 4 Alphabets, followed by 5 Digits and 1 Alphabet</inlineHelpText>
    <label>TAN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>