force-app/main/default/objects/Account/fields/Tertiary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Campaign__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp; Tertiary_Campaign_Id__c &amp;&quot;/view&quot;, Tertiary_Campaign_Name__c ,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tertiary Campaign</label>
    <type>Text</type>
</CustomField>