force-app/main/default/objects/Account/fields/Tertiary_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Campaign_Name__c</fullName>
    <label>Tertiary Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>