force-app/main/default/objects/Account/fields/Tertiary_Source__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Source__c</fullName>
    <label>Tertiary Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>