force-app/main/default/objects/Account/fields/Total_No_of_Endpoints_for_Backup__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Endpoints_for_Backup__c</fullName>
    <label>Total No of Endpoints for Backup</label>
    <length>200</length>
    <type>Text</type>
</CustomField>