force-app/main/default/objects/Account/fields/Total_No_of_Graphic_Workstations_Approx__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Graphic_Workstations_Approx__c</fullName>
    <label>Total No of Graphic Workstations(Approx)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>