force-app/main/default/objects/Account/fields/Total_No_of_Racks_at_Primary_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Racks_at_Primary_DC__c</fullName>
    <label>Total No of Racks at Primary DC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>