force-app/main/default/objects/Account/fields/Total_No_of_Racks_at_Secondary_DR__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Racks_at_Secondary_DR__c</fullName>
    <label>Total No of Racks at Secondary DR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>