force-app/main/default/objects/Account/fields/Total_No_of_VMs_Approx__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_VMs_Approx__c</fullName>
    <label>Total No of VMs (Approx)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>