force-app/main/default/objects/Account/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to fire validation in approval process</description>
    <label>Validation?</label>
    <type>Checkbox</type>
</CustomField>