force-app/main/default/objects/Account/fields/VDI_workstation_type__c.field-meta.xml
<CustomField>
    <fullName>VDI_workstation_type__c</fullName>
    <label>VDI workstation type?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Pooled/Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>