force-app/main/default/objects/Account/fields/Virtual_Desktops_VDI__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Desktops_VDI__c</fullName>
    <label>Virtual Desktops (VDI)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>