force-app/main/default/objects/Account/fields/What_is_the_Virtualization_Technology__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Virtualization_Technology__c</fullName>
    <label>What is the Virtualization Technology?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>KVM</fullName>
            </value>
            <value>
                <fullName>Microsoft HyperV</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Xen</fullName>
            </value>
            <value>
                <fullName>Acropolis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>