force-app/main/default/objects/Account/fields/Who_can_be_an_executive_sponsor__c.field-meta.xml
<CustomField>
    <fullName>Who_can_be_an_executive_sponsor__c</fullName>
    <inlineHelpText>Who from Yotta / Hiranandani can be an executive sponsor of this account</inlineHelpText>
    <label>Who can be an executive sponsor?</label>
    <type>TextArea</type>
</CustomField>