force-app/main/default/objects/Account/fields/Who_from_CIO_community_can_help__c.field-meta.xml
<CustomField>
    <fullName>Who_from_CIO_community_can_help__c</fullName>
    <inlineHelpText>Who from CIO community (YCIC or otherwise) can be help in this account</inlineHelpText>
    <label>Who from CIO community can help?</label>
    <type>TextArea</type>
</CustomField>