force-app/main/default/objects/Account/fields/Who_from_partner_community_can_be_help__c.field-meta.xml
<CustomField>
    <fullName>Who_from_partner_community_can_be_help__c</fullName>
    <inlineHelpText>Who from partner community can be help in this account</inlineHelpText>
    <label>Who from partner community can be help?</label>
    <type>TextArea</type>
</CustomField>