force-app/main/default/objects/Account/fields/YNSL_MSA_Number__c.field-meta.xml
<CustomField>
    <fullName>YNSL_MSA_Number__c</fullName>
    <label>YNSL MSA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>