force-app/main/default/objects/Account/fields/Yotta_Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Yotta_Account_Strategy__c</fullName>
    <label>Yotta Account Strategy</label>
    <type>TextArea</type>
</CustomField>