force-app/main/default/objects/Account/fields/Your_Cloud_Connect_Provider__c.field-meta.xml
<CustomField>
    <fullName>Your_Cloud_Connect_Provider__c</fullName>
    <label>Your Cloud Connect Provider?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>