force-app/main/default/objects/Account/validationRules/Asset_Management_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Management_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(    Asset_Management_Platform_HardCat_IBM_M__c , &apos;Yes&apos;),
ISBLANK(    asset_management_tool_yes__c )
)</errorConditionFormula>
    <errorDisplayField>asset_management_tool_yes__c</errorDisplayField>
    <errorMessage>Please Enter Asset Management Tool Details</errorMessage>
</ValidationRule>