force-app/main/default/objects/Account/validationRules/Cant_change_account_name_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_account_name_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Name),
ISPICKVAL(KYC_Approval_Status__c , &apos;Approved&apos;),
AND(OR(
ISPICKVAL(OMT_Approval_Status__c , &apos;Approved&apos;),
ISPICKVAL(OMT_Approval_Status__c , &apos;Not - Submitted&apos;)
),

NOT(ISCHANGED(OMT_Approval_Status__c ))),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>Account Name modifications are not allowed!</errorMessage>
</ValidationRule>