force-app/main/default/objects/Account/validationRules/Cant_create_Accounts_directly.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_create_Accounts_directly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(Converted_Account__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Please follow lead conversion process for new account creation</errorMessage>
</ValidationRule>