force-app/main/default/objects/Account/validationRules/Effective_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name_Change_Effective_Date__c ) &amp;&amp;  !ISBLANK(New_Customer_Name__c )</errorConditionFormula>
    <errorMessage>Effective Date is mandatory for entering New Customer Name.</errorMessage>
</ValidationRule>