force-app/main/default/objects/Account/validationRules/Endpoint_Backup_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Endpoint_Backup_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(   Endpoint_Backup__c , &apos;Yes&apos;),
ISBLANK(   If_Endpoint_Backup_is_present__c )
)</errorConditionFormula>
    <errorDisplayField>If_Endpoint_Backup_is_present__c</errorDisplayField>
    <errorMessage>Please Select Endpoint Backup</errorMessage>
</ValidationRule>