force-app/main/default/objects/Account/validationRules/Is_Primary_DC_OnPremise_or_3rd_Party.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Primary_DC_OnPremise_or_3rd_Party</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Is_your_Primary_Datacenter_Captive_or_3r__c, &apos;3rd Party&apos;),
ISBLANK(Select_3rd_Party__c )
)</errorConditionFormula>
    <errorDisplayField>Select_3rd_Party__c</errorDisplayField>
    <errorMessage>Please Select 3rd Party for Primary DC</errorMessage>
</ValidationRule>