force-app/main/default/objects/Account/validationRules/ITSM_Used_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ITSM_Used_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(    ITSM_used_ServiceNow_Remedy_etc__c , &apos;Yes&apos;),
ISBLANK(    ITSM_yes__c )
)</errorConditionFormula>
    <errorDisplayField>ITSM_yes__c</errorDisplayField>
    <errorMessage>Please Specify the Tool for ITSM Used</errorMessage>
</ValidationRule>