force-app/main/default/objects/Account/validationRules/KYC_Approval_Address_Record_of_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>KYC_Approval_Address_Record_of_Billing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Submit_for_KYC_Approval__c),
Submit_for_KYC_Approval__c,
Billing_Address_Count__c &lt; 1)</errorConditionFormula>
    <errorMessage>Please add the billing address for the account before submitting it for KYC approval</errorMessage>
</ValidationRule>