force-app/main/default/objects/Account/validationRules/KYC_Status_required_before_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>KYC_Status_required_before_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Validation__c ) &amp;&amp; Validation__c</errorConditionFormula>
    <errorMessage>Please Update KYC Status before Approval</errorMessage>
</ValidationRule>