force-app/main/default/objects/Account/validationRules/Orchestrator_Provisioning_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Orchestrator_Provisioning_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(   Are_you_using_any_Orchestrator_Provisi__c , &apos;Yes&apos;),
ISBLANK(   Any_Orchestrator_Provisioning_Platform__c )
)</errorConditionFormula>
    <errorDisplayField>Any_Orchestrator_Provisioning_Platform__c</errorDisplayField>
    <errorMessage>Please Enter Orchestrator/Provisioning Platform</errorMessage>
</ValidationRule>