force-app/main/default/objects/Account/validationRules/PAN_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Number_Validation</fullName>
    <active>true</active>
    <description>Added by Nandish for PAN Validation</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(PAN__c )),
NOT( REGEX( PAN__c , &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>PAN Number has to be of correct format. Total Length 10. 5 Alphabets, followed by 4 Digits and 1 Alphabet</errorMessage>
</ValidationRule>