force-app/main/default/objects/Account/validationRules/Partner_Type_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Type_is_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( PartnerType__c ) ),( ISBLANK( Partner_Manager__c ) ))</errorConditionFormula>
    <errorMessage>Enter Partner Manager for following Partner Account</errorMessage>
</ValidationRule>