force-app/main/default/objects/Account/validationRules/TAN_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TAN_Number_Validation</fullName>
    <active>true</active>
    <description>Added by Nandish for TAN Validation</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(TAN__c )),
NOT( REGEX( TAN__c , &quot;[A-Za-z]{4}[0-9]{5}[A-z]{1}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>TAN__c</errorDisplayField>
    <errorMessage>TAN Number has to be of correct format. Total Length 10. 4 Alphabets, followed by 5 Digits and 1 Alphabet</errorMessage>
</ValidationRule>