force-app/main/default/objects/Account/validationRules/Upload_documents_before_KYC_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Upload_documents_before_KYC_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Submit_for_KYC_Approval__c ) &amp;&amp;
Submit_for_KYC_Approval__c &amp;&amp;
(
  NOT( Address_Proof_Uploaded__c ) ||
  NOT( Identity_Proof_Uploaded__c )
)</errorConditionFormula>
    <errorMessage>Upload document against Identity proof and Address proof</errorMessage>
</ValidationRule>