force-app/main/default/objects/Account/validationRules/Upload_documents_before_SCF_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Upload_documents_before_SCF_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Submit_for_KYC_Approval__c ) &amp;&amp;
Submit_for_KYC_Approval__c &amp;&amp;
ISPICKVAL( KYC_Approval_Status__c , &quot;Approved&quot;) &amp;&amp;
NOT( Signed_SCF_Uploaded__c )</errorConditionFormula>
    <errorMessage>Upload Signed SCF document before OMT Approval</errorMessage>
</ValidationRule>