force-app/main/default/objects/Account/validationRules/Virtual_Desktops_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_Desktops_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(  Virtual_Desktops_VDI__c , &apos;Yes&apos;),
ISBLANK(  If_VDI_present__c )
)</errorConditionFormula>
    <errorDisplayField>If_VDI_present__c</errorDisplayField>
    <errorMessage>Please Select VDI</errorMessage>
</ValidationRule>