force-app/main/default/objects/Account/listViews/All_Partner_Accounts2.listView-meta.xml
<ListView>
    <fullName>All_Partner_Accounts2</fullName>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PartnerType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PartnerType__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Partner Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Yotta_Partner_Head</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>