force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Company_Type__c</columns>
    <columns>Account_category__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>YottaIndustry__c</columns>
    <columns>PartnerType__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>KYC_Approval_Status__c</columns>
    <columns>OMT_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>