force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_category__c</columns>
    <columns>Company_Type__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>